# domino

./: .gitignore  CMakeLists.txt  game.c  main.c
components/: Piece.c  Piece.h  action_menu.h  display.h  main_menu.h
controller/: game.c  gameController.c  gameController.h
model/: gameModel.c  gameModel.h
view/: action_menu.c  action_menu.h  display.c  display.h  gameView.c  gameView.h  main_menu.c  main_menu.h
